tekton-cel/block-tekton-task-runs/.chainsaw-test/policy-ready.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: block-tekton-task-runs
status:
  ready: true
