tekton-cel/block-tekton-task-runs/.chainsaw-test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: block-tekton-task-runs
spec:
  steps:
  - name: step-00
    try:
    - assert:
        file: chainsaw-step-00-assert-1.yaml
  - name: step-01
    try:
    - apply:
        file: ../block-tekton-task-runs.yaml
    - patch:
        resource:
          apiVersion: kyverno.io/v1
          kind: ClusterPolicy
          metadata:
            name: block-tekton-task-runs
          spec:
            validationFailureAction: Enforce
    - assert:
        file: chainsaw-step-01-assert-1.yaml
  - name: step-02
    try:
    - apply:
        expect:
        - check:
            ($error != null): true
        file: taskrun.yaml
